Upgrade project to angular 7.1.4

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -7,7 +7,7 @@
     <form (ngSubmit)="onSubmit()">
       <mat-card class="login-card">
         <mat-card-header>
-          <h2 class="primary-title">Welcome to MIL CLub</h2>
+          <h2 class="primary-title">Welcome to Angular7</h2>
         </mat-card-header>
         <mat-card-content>
           <mat-form-field class="full-width">
